--- a/package.json
+++ b/package.json
@@ -18,5 +18,6 @@
     "@types/lodash": "^4.14.66",
     "@types/node": "^8.0.3",
     "typescript": "^2.3.4"
-  }
+  },
+  "types": "lib/index.d.ts"
 }
